tests: add unit tests for modules/ref.nix.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,3 +22,12 @@ jobs:
       with:
         github_access_token: ${{ secrets.GITHUB_TOKEN }}
     - run: nix flake check
+    - name: Run Nix tests
+      run: |
+        cd tests/
+        result=$(nix eval --impure --expr 'import ./ref-test.nix {}')
+        if [ "$result" != "[ ]" ]; then
+          echo "Test failed: Expected [], but got $result"
+          exit 1
+        fi
+      shell: bash
