remotes: add gpg-import option.
Adds an option to declare imports of a GPG key from file.
Refactor remotes helper functions in modules/remotes.nix.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,10 +24,5 @@ jobs:
     - run: nix flake check
     - name: Run Nix tests
       run: |
-        cd tests/
-        result=$(nix eval --impure --expr 'import ./ref-test.nix {}')
-        if [ "$result" != "[ ]" ]; then
-          echo "Test failed: Expected [], but got $result"
-          exit 1
-        fi
+        ./test.sh
       shell: bash
