--- a/.github/workflows/flakehub-publish-tagged.yml
+++ b/.github/workflows/flakehub-publish-tagged.yml
@@ -25,4 +25,5 @@ jobs:
           visibility: "public"
           name: "gmodena/nix-flatpak"
           tag: "${{ inputs.tag }}"
-
+      - name: Run latest-tag
+        uses: EndBug/latest-tag@latest
