--- a/.github/workflows/tag-latest.yml
+++ b/.github/workflows/tag-latest.yml
@@ -12,7 +12,8 @@ on:
 jobs:
   update-latest-tag:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: "write"
     steps:
     - name: Checkout the repository
       uses: actions/checkout@v3
